@@ -1,3 +1,12 @@
+2003-11-21  Vince Darley <vincentdarley@users.sourceforge.net>
+
+	* generic/tkTextDisp.c: prevent wrapped line height calculations 
+	until the widget has actually been given a geometry.
+	
+	* tests/textWind.test: 
+	* tests/textDisp.test: fix to [Bug 843752], allowing tests to
+	complete cross-platform.  Thanks to dgp for extensive testing.
+	
 2003-11-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/FindPhoto.3: Removed reference to long-gone header file.
